Fix nav list style issue on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,8 @@ aside {
 nav ul {
     margin: 0;
     padding: 0;
+    list-style: none;
+    list-style-image: none;
 }
 
 nav a {
